--- a/Latex Stuff/write up-2/ref.bib
+++ b/Latex Stuff/write up-2/ref.bib
@@ -10,3 +10,13 @@
     year      = {2022},
     publisher = {" O'Reilly Media, Inc."}
 }
+@article{aggarwal2018neural,
+  title={Neural networks and deep learning},
+  author={Aggarwal, Charu C and others},
+  journal={Springer},
+  volume={10},
+  number={978},
+  pages={3},
+  year={2018},
+  publisher={Springer}
+}
