--- a/Latex Stuff/write up-2/ref.bib
+++ b/Latex Stuff/write up-2/ref.bib
@@ -20,3 +20,10 @@
   year={2018},
   publisher={Springer}
 }
+@article{li2018visualizing,
+  title={Visualizing the loss landscape of neural nets},
+  author={Li, Hao and Xu, Zheng and Taylor, Gavin and Studer, Christoph and Goldstein, Tom},
+  journal={Advances in neural information processing systems},
+  volume={31},
+  year={2018}
+}
