--- a/Latex Stuff/write up-2/ref.bib
+++ b/Latex Stuff/write up-2/ref.bib
@@ -27,3 +27,18 @@
   volume={31},
   year={2018}
 }
+@book{goodfellow2016deep,
+  title={Deep learning},
+  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  year={2016},
+  publisher={MIT press}
+}
+@article{sun2018improving,
+  title={Improving deep neural networks with multi-layer maxout networks and a novel initialization method},
+  author={Sun, Weichen and Su, Fei and Wang, Leiquan},
+  journal={Neurocomputing},
+  volume={278},
+  pages={34--40},
+  year={2018},
+  publisher={Elsevier}
+}
