--- a/Latex Stuff/write up-2/sample-book.tex
+++ b/Latex Stuff/write up-2/sample-book.tex
@@ -208,6 +208,33 @@
 \usetikzlibrary{shapes}
 
 
+
+
+\usepackage{listings}
+
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Python,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
+}
+
+
 \begin{document}
 
 % Front matter
@@ -221,8 +248,14 @@
 \include{BasicIdeas}
 \include{Training}
 
+\part{Deep Learning in NLP}
+\include{NLP}
+\include{embedding}
 
-
+\part{Sequence Modelling}\
+\include{RNNLSTM}
+\include{EncoderDecoder}
+\include{Attention}
 
 \backmatter
 
